--- a/src/main/assets/public/index.html
+++ b/src/main/assets/public/index.html
@@ -20,5 +20,5 @@
 </style><link rel="stylesheet" href="styles-LY5GT7YP.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-LY5GT7YP.css"></noscript><link rel="modulepreload" href="chunk-YOQQ5CTQ.js"><link rel="modulepreload" href="chunk-SCWYC5GG.js"><link rel="modulepreload" href="chunk-PWWNUZIU.js"><link rel="modulepreload" href="chunk-KWNZ2CR7.js"><link rel="modulepreload" href="chunk-WBOKHTJO.js"><link rel="modulepreload" href="chunk-OQV6BHXQ.js"><link rel="modulepreload" href="chunk-CWTPBX7D.js"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-YATDBCR7.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-WTB7P7V2.js" type="module"></script></body>
 </html>
